// Vitest Snapshot v1

exports[`Stepper test > renders in display only mode 1`] = `
<div
  class="sc-gKPRtg buorzf"
>
  <div
    class="sc-jSUZER eeLiNk"
  >
    <div
      class="sc-bcXHqe emxCrP"
    >
      <div
        class="sc-gswNZR hkQOUM"
      >
        <p>
          01
        </p>
        <div
          class="sc-hLBbgP fNXyZO"
        />
      </div>
      <div
        class="sc-dkrFOg VnjMe"
      />
    </div>
    <div
      class="sc-eDvSVe fYPDZJ"
    >
      <h4>
        Personal
      </h4>
    </div>
  </div>
  <div
    class="sc-jSUZER eeLiNk"
  >
    <div
      class="sc-bcXHqe emxCrP"
    >
      <div
        class="sc-gswNZR hkQOUM"
      >
        <p>
          02
        </p>
        <div
          class="sc-hLBbgP fNXyZO"
        />
      </div>
      <div
        class="sc-dkrFOg VnjMe"
      />
    </div>
    <div
      class="sc-eDvSVe fYPDZJ"
    >
      <h4>
        Company
      </h4>
    </div>
  </div>
  <div
    class="sc-jSUZER eeLiNk"
  >
    <div
      class="sc-bcXHqe emxCrP"
    >
      <div
        class="sc-gswNZR hkQOUM"
      >
        <p>
          03
        </p>
        <div
          class="sc-hLBbgP fNXyZO"
        />
      </div>
      <div
        class="sc-dkrFOg VnjMe"
      />
    </div>
    <div
      class="sc-eDvSVe fYPDZJ"
    >
      <h4>
        ELD
      </h4>
    </div>
  </div>
</div>
`;

exports[`Stepper test > renders stepper with some content 1`] = `
<div
  class="sc-gKPRtg gHXbGX"
>
  <div
    class="sc-jSUZER eeLiNk"
  >
    <div
      class="sc-bcXHqe emxCrP"
    >
      <div
        class="sc-gswNZR hkQOUM"
      >
        <p>
          01
        </p>
        <div
          class="sc-hLBbgP fNXyZO"
        />
      </div>
      <div
        class="sc-dkrFOg VnjMe"
      />
    </div>
    <div
      class="sc-eDvSVe fYPDZJ"
    >
      <h4>
        Personal
      </h4>
    </div>
  </div>
  <div
    class="sc-jSUZER eeLiNk"
  >
    <div
      class="sc-bcXHqe emxCrP"
    >
      <div
        class="sc-gswNZR hkQOUM"
      >
        <p>
          02
        </p>
        <div
          class="sc-hLBbgP fNXyZO"
        />
      </div>
      <div
        class="sc-dkrFOg VnjMe"
      />
    </div>
    <div
      class="sc-eDvSVe fYPDZJ"
    >
      <h4>
        Company
      </h4>
    </div>
  </div>
  <div
    class="sc-jSUZER eeLiNk"
  >
    <div
      class="sc-bcXHqe emxCrP"
    >
      <div
        class="sc-gswNZR hkQOUM"
      >
        <p>
          03
        </p>
        <div
          class="sc-hLBbgP fNXyZO"
        />
      </div>
      <div
        class="sc-dkrFOg VnjMe"
      />
    </div>
    <div
      class="sc-eDvSVe fYPDZJ"
    >
      <h4>
        ELD
      </h4>
    </div>
  </div>
</div>
`;
